tests/ui/attributes/crate-name-macro-call.stderr
error: malformed `crate_name` attribute input
  --> $DIR/crate-name-macro-call.rs:4:1
   |
LL | #![crate_name = concat!("my", "crate")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ help: must be of the form: `#![crate_name = "name"]`
   |
   = note: for more information, visit <https://doc.rust-lang.org/reference/crates-and-source-files.html#the-crate_name-attribute>

error: aborting due to 1 previous error

